--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -16,33 +16,16 @@
     <!-- ヘッダ -->
     <div class="navbar navbar-default navbar-static-top">
       <div class="container">
-        <%= render 'shared/header' %>
+        <%= render 'shared/admin/header' %>
       </div>
     </div>
     <!-- 本体 -->
-    <% unless current_user %>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-9">
-            <%= render 'shared/flash' %>
-            <%= yield %>
-          </div>
-          <div class="col-md-3">
-            <div class="well sidebar-nav">
-              <%= render 'shared/sidebar' %>
-            </div><!--/sidebar -->
-          </div>
-        </div><!--/row-->
-        <%= render 'shared/footer' %>
+    <div class="container">
+      <div class="row">
+        <%= render 'shared/flash' %>
+        <%= yield %>
       </div>
-    <% else %>
-      <div class="container">
-        <div class="row">
-          <%= render 'shared/flash' %>
-          <%= yield %>
-        </div>
-        <%= render 'shared/footer' %>
-      </div>
-    <% end %>
+      <%= render 'shared/admin/footer' %>
+    </div>
   </body>
 </html>
