--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -23,7 +23,9 @@
         <td>
           <%= link_to '編集', edit_admin_user_path(user.id), class: 'btn btn-default btn-xs',
             style: 'width: 5em' %>
-          <%= link_to_if (current_user.id != user.id), '削除', admin_user_path(user.id), method: :delete, class: 'btn btn-xs btn-danger', style: 'width: 5em;', data: { disable_with: '削除中'} %>
+          <% if current_user != user%>
+            <%= link_to '削除', admin_user_path(user.id), method: :delete, class: 'btn btn-xs btn-danger', style: 'width: 5em;', data: { disable_with: '削除中'} %>
+          <% end %>
         </td>
       </tr>
       <% end %>
