--- a/app/views/admin/problems/index.html.erb
+++ b/app/views/admin/problems/index.html.erb
@@ -14,6 +14,7 @@
         <th class="text-center">タイトル</th>
         <th class="text-center">解いたユーザ数</th>
         <th class="text-center">提出数</th>
+        <th class="text-center">正答率</th>
         <th class="text-center"></th>
       </tr>
     </thead>
@@ -26,6 +27,7 @@
         <td><%= problem.title %></td>
         <td class="text-right"><%= problem.solved_user %></td>
         <td class="text-right"><%= problem.submissions %></td>
+        <td class="text-cnter"><%= problem.success_rate %>%</td>
         <td>
           <%= link_to '編集', edit_admin_problem_path(problem.id), class: 'btn btn-default btn-xs',
             style: 'width: 5em' %>
