--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -1,27 +1,69 @@
 <div class="form-group">
-  <%= f.label :email, class: 'control-label col-md-2' %>
-  <div class="col-md-12">
-    <%= f.email_field :email, class: 'form-control' %>
-  </div>
+  <%= f.label :email, class: 'control-label' %>
+  <%= f.email_field :email, class: 'form-control' %>
 </div>
 
 <div class="form-group">
-  <%= f.label :password, class: 'control-label col-md-2' %>
-  <div class="col-md-12">
-    <%= f.password_field :password, class: 'form-control' %>
-  </div>
+  <%= f.label :code, class: 'control-label' %>
+  <%= f.text_field :code, disabled: true, class: 'form-control' %>
 </div>
 
 <div class="form-group">
-  <%= f.label :password_confirmation, class: 'control-label col-md-2' %>
-  <div class="col-md-12">
-    <%= f.password_field :password_confirmation, class: 'form-control' %>
-  </div>
+  <%= f.label :name, class: 'control-label' %>
+  <%= f.text_field :name, disabled: true, class: 'form-control' %>
 </div>
 
 <div class="form-group">
-  <div class="col-md-12">
-    <%= f.label :administrator %>
-    <%= f.check_box :administrator, disabled: (current_user.id == params[:id].to_i) %>
-  </div>
+  <%= f.label :submissions, class: 'control-label' %>
+  <%= f.number_field :submissions, disabled: true, class: 'form-control' %>
+</div>
+
+<div class="form-group">
+  <%= f.label :solved, class: 'control-label' %>
+  <%= f.number_field :solved, disabled: true, class: 'form-control' %>
+</div>
+
+<div class="form-group">
+  <%= f.label :accepted, class: 'control-label' %>
+  <%= f.number_field :accepted, disabled: true, class: 'form-control' %>
+</div>
+
+<div class="form-group">
+  <%= f.label :wronganswer, class: 'control-label' %>
+  <%= f.number_field :wronganswer, disabled: true, class: 'form-control' %>
+</div>
+
+<div class="form-group">
+  <%= f.label :timelimit, class: 'control-label' %>
+  <%= f.number_field :timelimit, disabled: true, class: 'form-control' %>
+</div>
+
+<div class="form-group">
+  <%= f.label :memorylimit, class: 'control-label' %>
+  <%= f.number_field :memorylimit, disabled: true, class: 'form-control' %>
+</div>
+
+<div class="form-group">
+  <%= f.label :outputlimit, class: 'control-label' %>
+  <%= f.number_field :outputlimit, disabled: true, class: 'form-control' %>
+</div>
+
+<div class="form-group">
+  <%= f.label :compileerror, class: 'control-label' %>
+  <%= f.number_field :compileerror, disabled: true, class: 'form-control' %>
+</div>
+
+<div class="form-group">
+  <%= f.label :runtimeerror, class: 'control-label' %>
+  <%= f.number_field :runtimeerror, disabled: true, class: 'form-control' %>
+</div>
+
+<div class="form-group">
+  <%= f.label :password, class: 'control-label' %>
+  <%= f.password_field :password, class: 'form-control' %>
+</div>
+
+<div class="form-group">
+  <%= f.label :password_confirmation, class: 'control-label' %>
+  <%= f.password_field :password_confirmation, class: 'form-control' %>
 </div>
