--- a/app/views/shared/admin/_header.html.erb
+++ b/app/views/shared/admin/_header.html.erb
@@ -1,10 +1,6 @@
-<%= link_to '管理者トップ', :admin_root, class: "navbar-brand" %>
-<div class="navbar-collapse collapse navbar-responsive-collapse">
-  <ul class="nav navbar-nav">
-    <li><%= link_to 'ユーザ一覧', :admin_users %></li>
-    <li><%= link_to '問題一覧', :admin_problems %></li>
+<div id="navbar" class="navbar-collapse collapse">
+  <ul class="nav navbar-nav navbar-right">
     <li><%= link_to current_user.email + 'さん', edit_user_path(current_user) %></li>
-    <li><%= link_to '表画面', :root %></li>
-    <li><%= link_to 'ログアウト', login_path, method: :delete %></li>
+    <li><%= link_to 'ログアウト', logout_path, method: :delete %></li>
   </ul>
 </div>
