--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -2,7 +2,7 @@
   <ul class="nav nav-sidebar">
     <li class="<%= active?('top', 'index') %>"><%= link_to '問題一覧', root_path %></li>
     <% if current_user %>
-      <li class="<%= active?('top', 'edit_aoj') %>"><%= link_to 'AOJデータ更新', edit_aoj_path %></li>
+      <li class="<%= active?('top', 'edit_aoj') %>"><%= link_to 'AOJデータ更新', edit_problems_path %></li>
     <% end %>
   </ul>
 </div>
