--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -22,7 +22,8 @@
           <td class="text-center"><%= problem.id %></td>
           <td class="text-center"><%= problem.volume %></td>
           <td class="text-center"><%= problem.code %></td>
-          <td><%= problem.title %></td>
+          <% url = 'http://judge.u-aizu.ac.jp/onlinejudge/description.jsp?lang=jp&id=' %>
+          <td><%= link_to problem.title, url + problem.code, target: '_blank' %></td>
           <% if current_user %>
             <td class="text-center">   <%= solved ? '解いた' : '' %></td>
           <% end %>
