--- a/app/views/admin/settings/edit.html.erb
+++ b/app/views/admin/settings/edit.html.erb
@@ -2,9 +2,9 @@
 
 <div class="col-md-6 col-md-offset-3">
   <h1>アカウントの編集</h1>
-  <%= render 'shared/errors', obj: @user %>
+  <%= render 'shared/errors', obj: @admin %>
 
-  <%= form_for @user do |f| %>
+  <%= form_with model: @admin, url: admin_settings_path do |f| %>
     <%= render 'form', f: f %>
     <%= f.submit 'アカウントを更新する', class: 'btn btn-primary' %>
   <% end %>
