--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -8,18 +8,18 @@
   <table class="table table-striped table-bordered">
     <thead>
       <tr>
-        <th class="text-center">id</th>
-        <th class="text-center">メールアドレス</th>
-        <th class="text-center">管理者</th>
-        <th class="text-center"></th>
+        <th class="text-center">ID</th>
+        <th class="text-center">コード</th>
+        <th class="text-center">名前</th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
       <% @users.each do |user| %>
       <tr>
         <td class="text-center"><%= user.id %></td>
-        <td><%= user.email %></td>
-        <td class="text-center"><%= '✓' if user.administrator? %></td>
+        <td class="text-center"><%= user.code %></td>
+        <td class="text-center"><%= user.name %></td>
         <td>
           <%= link_to '編集', edit_admin_user_path(user.id), class: 'btn btn-default btn-xs',
             style: 'width: 5em' %>
