--- a/app/views/layouts/error.html.erb
+++ b/app/views/layouts/error.html.erb
@@ -4,28 +4,39 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <%# favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
     <title>AojReco</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%# favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
   </head>
-
   <body>
     <!-- ヘッダ -->
-    <div class="navbar navbar-default navbar-static-top">
-      <div class="container">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <!-- スマホ画面用 -->
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <%= link_to 'AOJ Reco', root_path, class: 'navbar-brand' %>
+        </div>
         <%= render 'shared/header' %>
       </div>
-    </div>
+    </nav>
     <!-- 本体 -->
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
-        <%= render 'shared/flash' %>
-        <%= yield %>
+        <%= render 'shared/sidebar' %>
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+          <%= render 'shared/flash' %>
+          <%= yield %>
+        </div>
       </div>
-      <%= render 'shared/footer' %>
     </div>
   </body>
 </html>
