--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,4 +1,9 @@
 <h1 class="page-header">問題一覧</h1>
+<%= form_with url: :recommend, method: :get, local: true do |f| %>
+  <%= f.text_field :code, clss: 'form-control' %>
+  <%= f.submit '問題推薦して！' %>
+<% end %>
+
 <div class="table-responsive">
   <table class="table table-striped table-bordered">
     <thead>
