推薦方針を変更

--- a/app/views/top/recommend.html.erb
+++ b/app/views/top/recommend.html.erb
@@ -1,4 +1,4 @@
-<h1 class="page-header">推薦問題(IDの昇順で解いていない問題を3つずつ)</h1>
+<h1 class="page-header">推薦問題(解ける確率が高い順で解いていない問題を3つずつ)</h1>
 <% @recommends.each do |key, problems| %>
   <div class="table-responsive">
     <h2><%= I18n.t("recommend.#{key}") %></h2>
